fixed second postcode first screen and contrast on survey banners

--- a/NHS111/NHS111.Web/Content/css_NhsUK/application.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/application.css
@@ -2479,3 +2479,8 @@ button[disabled=disabled] {
     }
 
 }
+
+.alwayshidden {
+  display: none !important;
+  visibility: hidden !important;
+}
