--- a/NHS111/NHS111.Web/Content/css_NhsUK/banner.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/banner.css
@@ -5,14 +5,14 @@
     color: #fff;
 }
 .notification-banner--hiviz {
-    background-color: #ffca55;
+    background-color: #fada8b;
 }
 .notification-banner--hiviz a:visited {
-    color: #0072C6;
+    color: #00276f;
 }
 .notification-banner--hiviz a:link {
-    color: #0072C6;
-    background-color: #ffca55;
+    color: #004d97;
+    background-color: #fada8b;
 }
 .notification-banner--inner {
     margin: 0 16px;
